Fix gallery image sizing (bug found on safari)

--- a/styles.css
+++ b/styles.css
@@ -662,6 +662,7 @@ aside span {
 	border-radius: var(--border-inner);
 	transition: var(--standard-transition);
 	object-fit: cover;
+	width: 100%;
 	height: 100%;
 	filter: var(--img-filter);
 }
